# TuskAct3-Agent

./: .env.template  .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  api_server.py  build_release.py  pyproject.toml  pytest.ini  requirements.txt  run_autonomy_demo.py  run_demo.py  run_demo_goal.py  run_mission.py  run_offline_eval.py  run_quick_demo.ps1  run_quick_demo.sh  run_record_demo.py  run_recovery_demo.py  run_rollout.py
config/: canonical_missions.json  secrets.example.yaml  settings.yaml
configs/: eikon.yaml  memory.json  skills.json
dashboard/: __init__.py  data_loader.py  server.py
docs/: artifacts.md  artifacts_viewer.html  demo.md  demo_quickstart.md  dev_notes.md  healthcheck.txt  index.html  json_viewer.html  overview.md  phase3_trace_replay.md  quick_video.md  reviewer_guide.md  yc_pitch.md
eikon_engine/: __init__.py  config_loader.py
examples/: __init__.py  autonomous_demo.py
missions/: recovery_browser_task.json
scripts/: generate_demo_assets.py  generate_run_summary.py  heroku_login_demo.py  make_demo_gif.py  run_browser_demo.py  run_demo_goal.py  setup_dev.sh
src/: __init__.py  common_types.py  completion.py  graph_optimizer.py  runtime_state.py  task_orchestrator.py  telemetry.py  tool_policy.py
tests/: phase4_fakes.py  test_autonomous_runner.py  test_autonomous_v2.py  test_browser_session.py  test_completion_flow.py  test_graph_optimizer.py  test_memory_basic.py  test_memory_write_post_execution.py  test_planner_v2.py  test_runtime_state_machine.py  test_selector_resolver.py  test_strategist_v1.py  (+10 more)
(+368 files in other folders)
