[project]
name = "eikon_engine"
version = "0.2.0"
description = "Autonomous Strategist + BrowserWorker pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "GitHub Copilot", email = "copilot@example.com"}]
dependencies = [
	"python-dotenv==1.0.1",
	"typing-extensions==4.12.2",
	"pydantic==2.8.2",
	"openai==1.42.0",
	"tiktoken==0.7.0",
	"httpx==0.27.2",
	"aiohttp==3.9.5",
	"anyio==4.4.0",
	"uvloop==0.19.0; sys_platform == 'linux'",
	"chromadb==0.5.5",
	"faiss-cpu==1.8.0",
	"sentence-transformers==2.7.0",
	"playwright==1.48.0",
	"loguru==0.7.2",
	"rich==13.8.0",
	"docker==7.1.0",
	"pytest==8.3.2",
	"pytest-asyncio==0.23.7",
	"black==24.8.0",
	"isort==5.13.2",
	"mypy==1.11.2",
	"imageio==2.35.1",
	"Pillow==10.4.0",
	"reportlab==4.2.0",
]

[project.urls]
homepage = "https://github.com/startup/eikon-engine"
documentation = "https://github.com/startup/eikon-engine/tree/main/docs"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 110

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false

